2021-12-07 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTLS.m: (-disconnect:) try once if we are closing the TCP
	connection, for up to 10 seconds if trying to keep it available.
	* Source/NSFileHandle.m: (-sslDisconnect) operate in non-blocking
	mode so that network issues should not cause a disconnect attempt
	to hang. This should behave better on heavily loaded systems.

2021-11-23 Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: check for zlib before bfd
	* configure: regenerate
	libbfd may need libz, so we must check for one before checking for
	the other.

2021-11-21 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Foundation/NSURLConnection.h: Add
        NSURLConnectionDataDelegate protocol.
	* Headers/Foundation/NSURLRequest.h: Add enum for
        NSURLNetworkServiceType.

2021-11-19 Richard Frith-Macdonald <rfm@gnu.org>

	* Helpers/Launch.h:
	* Helpers/capture.m:
	* Helpers/keepalive.m:
	* Helpers/respond.m:
	* test00.m:
	* test01.m:
	* test02.m:
	Rewrite helper launching so that the test process waits for up to
	ten seconds for the helper to tell it that it's ready to accept
	requests.  This should make tests run a bit quicker (no longer
	waiting a fixed interval for the helper to start) while allowing
	longer for the helpers to start on slow systems, and thus making
	the tests more reliable.

2021-11-11 Frederik Seiffert <frederik@algoriddim.com>

	* Headers/Foundation/NSBundle.h:
	Annotate NSBundle localized string function with NS_FORMAT_ARGUMENT.

2021-09-20 Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSFileManager.m:
	Fix -[NSFileManager URLForDirectory:...] using incorrect NSURL
	initializer and simplified implementation.

2021-09-16 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSJSONSerialization.m:
	* Source/NSURL.m:
	Fix minor potential leaks.

2021-08-27 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/nstzfile.h: deleted (merged into tzdb.h)
	* Source/tzdb.h: updated (includes nstzfile.h)